src/scss/styles.scss
@import "./variables";

* {
  box-sizing: border-box;
}
body {
  width: 70%;
  margin: auto;
  background-color: $primary-color;
  color: $text-color;
}

img {
  width: 150px;
  display: block;
  margin: auto;
}

.navbar-brand img {
  width: 200px;
}

#login-link {
  color: $tertiary-color;
}

.btn {
  color: $text-color;
  border: solid 1px;
  border-radius: 0;
}

.btn:hover {
  background-color: $text-color;
  color: $primary-color;
}

.logout:hover {
  cursor: pointer;
}

a {
  text-decoration: none;
  color: $text-color;
}

section,
.login,
.register,
footer {
  background-color: $secondary-color;
}

.brand img {
  width: 300px;
}

h1,
h2,
h3 {
  font-family: lato, sans-serif;

  font-weight: 400;

  font-style: normal;

  color: $tertiary-color;
}

p,
#login-link,
#register-link {
  font-family: open-sans, sans-serif;

  font-weight: 400;

  font-style: normal;
}

.listing {
  display: flex;
  flex-direction: column;
  width: 250px;
  height: 320px;
  font-size: 25px;
  border: solid 1px white;
  padding: 10px;
  text-align: center;
  background-image: linear-gradient(
    to bottom right,
    rgba(255, 166, 64, 0.322),
    rgba(245, 61, 61, 0.356)
  );
}

.listings {
  margin: 30px;
}

.single {
  display: flex;
  padding: 30px;
  width: 100%;
  border: solid 1px white;
  background-image: linear-gradient(
    to bottom right,
    rgba(255, 166, 64, 0.322),
    rgba(245, 61, 61, 0.356)
  );
}

.date {
  background-color: rgba(255, 255, 255, 0.205);
  font-size: 15px;
  margin: 5px;
}

.profile {
  display: flex;
  justify-content: center;
}

.profileDetails {
  flex-basis: 300px;
  margin-left: 20px;
}

.profileListings {
  margin-top: 20px;
}

.noListing,
.noBids,
.bidError {
  color: $red;
}

.bid {
  margin: auto;
  width: 500px;
  height: 300px;
}

.bidders {
  display: flex;
  height: 300px;
  width: 300px;
}

.bidder {
  border: solid 1px white;
  background-image: linear-gradient(
    to bottom right,
    rgba(255, 166, 64, 0.322),
    rgba(245, 61, 61, 0.356)
  );
  width: 100px;
  text-align: center;
}

.loader {
  border: 10px solid #ffffff;
  border-top: 10px solid #d18e67;
  border-radius: 100%;
  width: 70px;
  height: 70px;
  animation: spin 2s linear infinite;
  position: absolute;
  left: 50%;
  transform: translate(-50%);
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@media only screen and (max-width: 768px) {
  h1,
  h2 {
    text-align: center;
  }

  .wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    width: auto;
  }
  
  /* .welcomeText {
    width: 100%;
  } */
}
@media only screen and (max-width: 600px) {
  body {
    width: 100%;
  }

  .bid {
    width: 100%;
    margin: auto;
  }

  .bidders {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: auto;
    width: auto;
  }

  footer {
    width: 100%;
  }
}
@media only screen and (max-width: 500px) {

  /* .welcomeText {
    font-size: 14px;
  }
   */
  .single,
  .profile {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 500px;
  }

  .bidders {
    height: auto;
  }
}

